boootstrap5 installed and class on html -> pagina001 add

--- a/Projeto_padaria/parceiros/templates/html/pagina01.html
+++ b/Projeto_padaria/parceiros/templates/html/pagina01.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/portable.css">
-    <title>Pagina Principal</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../css/portable.css">
+        <title>Pagina Principal</title>
+        {% load bootstrap5 %}
 </head>
 <body>
     <header>
         <section>
-            <div>
-                <ul>
-                    <h2>INICIO</h2>
-                    <h2>PARCEIROS</h2>
-                    <h2>SOBRE NOS</h2>
-                </ul>
-            </div>
+            <nav class="nav nav-pills nav-fill">
+                
+                <a class="nav-link active">INICIO</a>
+                <a>PARCEIROS</a>
+                <a>SOBRE NOS</a>
+        
+            </nav>
         </section>
+
     </header>
     <main></main>
     <footer></footer>
