pagina001 on template , create nagation section and elements bootstrap5

--- a/Projeto_padaria/parceiros/templates/css/portable.css
+++ b/Projeto_padaria/parceiros/templates/css/portable.css
@@ -1,1 +1,6 @@
 @charset "UTF-8";
+@media only screen  and (max-device-width: 825px){
+    div#navbarToggleExternalContent{
+        pointer-events: visible;
+    }
+}
