--- a/Projeto_padaria/parceiros/templates/html/pagina01.html
+++ b/Projeto_padaria/parceiros/templates/html/pagina01.html
@@ -4,20 +4,43 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../css/portable.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <title>Pagina Principal</title>
         {% load bootstrap5 %}
+        {% bootstrap_css %}
+        {% bootstrap_javascript %}
 </head>
 <body>
     <header>
-        <section>
-            <nav class="nav nav-pills nav-fill">
-                
-                <a class="nav-link active">INICIO</a>
-                <a>PARCEIROS</a>
-                <a>SOBRE NOS</a>
-        
-            </nav>
-        </section>
+        <section class="Navegation"><!-- Section navegation top -->
+
+            <div class="collapse" id="navbarToggleExternalContent"><!-- Navegation mobile -->
+                <div class="bg-dark p-4">
+                  <h5 class="text-white h4">Collapsed content</h5>
+                  <span class="text-muted">Toggleable via the navbar brand.</span>
+                </div>
+              </div><!-- End navation mobile -->
+
+            <div class="container-fluid"><!-- Conteiner flex navegation -->
+                <nav class="navbar fixed-top navbar-dark bg-dark"><!-- Navegation desktop -->
+                    
+                    <a class="nav-link active">
+                        <i class="bi bi-house"></i>INICIO
+                    </a>
+                    <a class="nav-link active">
+                        <i class="bi bi-person-circle"></i>PARCEIROS
+                    </a>
+                    <a class="nav-link active">
+                        <i class="bi bi-info"></i>SOBRE NOS
+                    </a>
+                    <form class="d-flex" action="" method="get">
+                        <input class="form-control me-2" type="search">
+                        <button class="btn btn-outline-success" type="submit">Procurar</button>
+                    </form>
+            
+                </nav><!-- end navegation desktop -->
+            </div><!-- end conteiner flex navegation -->
+        </section><!-- end section navegation top -->
 
     </header>
     <main></main>
