--- a/Projeto_padaria/parceiros/templates/html/pagina01.html
+++ b/Projeto_padaria/parceiros/templates/html/pagina01.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/portable.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <title>Pagina Principal</title>
+        {% load static %}
         {% load bootstrap5 %}
         {% bootstrap_css %}
         {% bootstrap_javascript %}
@@ -22,16 +22,16 @@
               </div><!-- End navation mobile -->
 
             <div class="container-fluid"><!-- Conteiner flex navegation -->
-                <nav class="navbar fixed-top navbar-dark bg-dark"><!-- Navegation desktop -->
+                <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark"><!-- Navegation desktop -->
                     
-                    <a class="nav-link active">
-                        <i class="bi bi-house"></i>INICIO
+                    <a class="navbar-brand">
+                        INICIO
                     </a>
-                    <a class="nav-link active">
-                        <i class="bi bi-person-circle"></i>PARCEIROS
+                    <a class="navbar-brand">
+                        PARCEIROS
                     </a>
-                    <a class="nav-link active">
-                        <i class="bi bi-info"></i>SOBRE NOS
+                    <a class="navbar-brand">
+                        SOBRE NOS
                     </a>
                     <form class="d-flex" action="" method="get">
                         <input class="form-control me-2" type="search">
@@ -41,9 +41,25 @@
                 </nav><!-- end navegation desktop -->
             </div><!-- end conteiner flex navegation -->
         </section><!-- end section navegation top -->
-
     </header>
-    <main></main>
+    <main>
+        <section class="upper_main_img">
+            <div class="img_background">
+                <div class="img_1">
+                    <img src="{% static 'imgs/background_img_upper.jpg' %}" class="img-fluid" alt="background_img_upper.jpg">
+                </div>
+                <div class="img_2"></div>
+                <div class="img_3"></div>
+            </div>
+        </section>
+        <section class="lower_main_img">
+            <div class="img_background">
+                <div class="paragraphy_lower_main">
+
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
