--- a/Projeto_padaria/static/css/portable.css
+++ b/Projeto_padaria/static/css/portable.css
@@ -1,4 +1,7 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+
+
 @media only screen  and (max-device-width: 825px){
     div#navbarToggleExternalContent{
         pointer-events: visible;
