add background image on section upper img, text add in div anucimment, wap on nav bar text to a bit small

--- a/Projeto_padaria/parceiros/templates/html/pagina01.html
+++ b/Projeto_padaria/parceiros/templates/html/pagina01.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link rel="stylesheet" href="{% static 'css/portable.css' %}">
+        <link rel="stylesheet" href="{% static 'css/desk.css' %}" type="text/css">
         <title>Pagina Principal</title>
         {% load bootstrap5 %}
         {% bootstrap_css %}
@@ -23,37 +24,42 @@
               </div><!-- End navation mobile -->
 
             <div class="container-fluid"><!-- Conteiner flex navegation -->
-                <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark"><!-- Navegation desktop -->
-                    
-                    <a class="navbar-brand">
-                        INICIO
-                    </a>
-                    <a class="navbar-brand">
-                        PARCEIROS
-                    </a>
-                    <a class="navbar-brand">
-                        SOBRE NOS
-                    </a>
-                    <form class="d-flex" action="" method="get">
-                        <input class="form-control me-2" type="search">
-                        <button class="btn btn-outline-success" type="submit">Procurar</button>
-                    </form>
-            
+                <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark justify-content-end" id="nav-response"><!-- Navegation desktop -->
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="#">Inico</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="#">Empresas</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="#">Fotos</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="#">Sobre</a>
+                        </li>
+                    </ul>
                 </nav><!-- end navegation desktop -->
             </div><!-- end conteiner flex navegation -->
         </section><!-- end section navegation top -->
     </header>
     <main>
         <section class="upper_main_img">
-            <div class="img_background">
+            <h1>Fornecedores do dia</h1>
+            <div class="anunnciment">
                 <div class="img_1">
-                    <img src="{% static 'imgs/background_img_upper.jpg' %}" class="img-fluid" alt="background_img_upper.jpg">
+                    <h2>Pizza Italiana</h2>
+                    <p>Deliciosa pizza italina a com tomate pomodoro e de longa fermentação</p>
+                    <button>Ver Loja</button>
+                    <button>Fazer pedido</button>
                 </div>
                 <div class="img_2"></div>
                 <div class="img_3"></div>
+            </img>
             </div>
+             
         </section>
-        <section class="lower_main_img">
+        <section>
             <div class="img_background">
                 <div class="paragraphy_lower_main">
 
