--- a/Projeto_padaria/parceiros/templates/html/pagina01.html
+++ b/Projeto_padaria/parceiros/templates/html/pagina01.html
@@ -23,8 +23,8 @@
                 </div>
               </div><!-- End navation mobile -->
 
-            <div class="container-fluid"><!-- Conteiner flex navegation -->
-                <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark justify-content-end" id="nav-response"><!-- Navegation desktop -->
+            <div class="container-fluid" id="nav-response"><!-- Conteiner flex navegation -->
+                <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark justify-content-end" ><!-- Navegation desktop -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
                           <a class="nav-link active" aria-current="page" href="#">Inico</a>
