--- a/Projeto_padaria/parceiros/static/css/desk.css
+++ b/Projeto_padaria/parceiros/static/css/desk.css
@@ -4,11 +4,14 @@ main{
     background-color: black;
 }
 
+s
+
 section.upper_main_img{
     background: black url('../imgs/background_img_upper.jpg') no-repeat;
     color: black;
     padding: 7%;
     border-radius: 1%;
+    margin: 5%;
 }
 
 .anunnciment{  
