add img div on static and on css style, rename css file to not confision and div annoucement in position

--- a/Projeto_padaria/parceiros/templates/html/pagina01.html
+++ b/Projeto_padaria/parceiros/templates/html/pagina01.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-        <link rel="stylesheet" href="{% static 'css/mobile.css' %}">
-        <link rel="stylesheet" href="{% static 'css/desktop.css' %}" type="text/css">
+        <link rel="stylesheet" href="{% static 'css/mobile.css'  %}" alt="css_max768">
+        <link rel="stylesheet" href="{% static 'css/desktop.css' %}" type="text/css" alt="css_max1300">
         <title>Pagina Principal</title>
         {% load bootstrap5 %}
         {% bootstrap_css %}
@@ -47,10 +47,10 @@
                 <div class="text-img">
                     <h2>Pizza Italiana</h2>
                     <p>Deliciosa pizza italina a com tomate pomodoro e de longa fermentação</p>
-                    <button>Ver Loja</button>
-                    <button>Fazer pedido</button>
+                    <button class="button_annoucement">Ver Loja</button>
+                    <button class="button_annoucement-nonebg">Fazer pedido</button>
                 </div>
-                <div class="img-anuciment">
+                <div class="img-anoucement">
                     <img src="{% static '/imgs/pizza.png' %}" alt="img_pizza" id="pizza_anuciment">
                 </div>
                 <div class="img_2"></div>
