--- a/Projeto_padaria/parceiros/static/css/desktop.css
+++ b/Projeto_padaria/parceiros/static/css/desktop.css
@@ -1,9 +1,10 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Dancing+Script:wght@400..700&display=swap');
 /* Global config */
 body, html{
     margin: 0;
     padding: 0;
-    background-color: rgba(0, 0, 0, 0.781);
+    background-color: rgba(180, 176, 176, 0.507);
 }
 
 /* navbar */
@@ -19,28 +20,58 @@ section.upper_main_img{
     height: 85vh;
     background: black url('../imgs/background_img_upper.jpg') no-repeat;
     color: black;
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.795);
 }
 section.upper_main_img > h1{
+    font-family: "Abel", serif;
+    color: aliceblue;
     text-align: center;
     padding-top: 5%;
 }
 
 .anunnciment{  
-    padding-top: 7%;
-    
+    display: inline;
+    padding-top: 7%;  
 }
 
 div.text-img{
+    display: inline;
+    float: left;
     padding-left: 2%;
     padding-top: 10%;
     text-align: right;
+}
+div.text-img > h2{
+    font-size: 50px;
+}
+div.text-img > p{
+    font-size: 30px;
+    text-align: center;
+}
+div.text-img > h2 , p{
+    font-family: "Dancing Script", serif;
+    color:aliceblue;
+}
+.img-anoucement{
+    display: inline;
+    align-items: center;
     float: left;
-    
+    padding-left: 2%;
 }
 
 img#pizza_anuciment{
-    float: right;
     padding-right: 1%;
-    width: 40%;
+    width: 400px;
     
+}
+.button_annoucement{
+    color: black;
+    background-color: yellow;
+    border-radius: 5%;
+    box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.562);
+    font-size: 40px;
+    
+}
+.button_annoucement-nonebg{
+    border: 3px dashed white;
 }
