--- a/Projeto_padaria/parceiros/templates/html/pagina01.html
+++ b/Projeto_padaria/parceiros/templates/html/pagina01.html
@@ -59,10 +59,15 @@
             </div>
              
         </section>
-        <section>
+        <section class="mid_main_anouciment">
             <div class="img_background">
                 <div class="paragraphy_lower_main">
-
+                    <p>Ver lojas parceiras</p>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <p>Ver novos produtos</p>
                 </div>
             </div>
         </section>
