--- a/Projeto_padaria/parceiros/templates/html/pagina01.html
+++ b/Projeto_padaria/parceiros/templates/html/pagina01.html
@@ -51,7 +51,7 @@
                         <button class="button_annoucement">Ver Loja</button>
                         <button class="button_annoucement-nonebg">Fazer pedido</button>
                     </div>
-                    <div class="img-anoucement">
+                    <div class="img-anoucement" class="img-fluid">
                         <img src="{% static '/imgs/pizza.png' %}" alt="img_pizza" id="pizza_anuciment">
                     </div>
                 </div>
@@ -59,8 +59,8 @@
              
         </section>
         <section class="mid_main_anouciment">
-            <div class="img_background">
-                <div class="paragraphy_lower_main">
+            <div class="img_background_mid">
+                <div class="paragraphy_mid">
                     <p>Ver lojas parceiras</p>
                 </div>
             </div>
