--- a/Projeto_padaria/parceiros/static/css/desktop.css
+++ b/Projeto_padaria/parceiros/static/css/desktop.css
@@ -29,7 +29,7 @@ section.upper_main_img{
 }
 section.upper_main_img > div.container > h1{
     font-family: 'Times New Roman', Times, serif;
-    font-size: 4em;
+    font-size: 4vw;
     color: aliceblue;
     text-align: center;
     text-decoration: underline;
@@ -64,12 +64,15 @@ div.text-img > h2 , p{
     display: inline;
     margin-left: 2%;
     max-width: 100%;
-    max-height: 50%;
+
 }
 
 img#pizza_anuciment{
     display: inline;
     width:500px;
+    max-width: 34vw;
+    max-height: 100vh;
+    min-width: 30%;
 }
 
 .button_annoucement{
@@ -92,12 +95,15 @@ img#pizza_anuciment{
 }
 /* Mid section annoucement */
 .mid_main_anouciment{
-    background-color: whitesmoke;
+    background-color: rgb(255, 252, 252);
     margin-top: 1%;
     border-radius: 2%;
     height: 50vh;
 }
 .paragraphy_mid > p{
     color: black;
-    size: 50%;
+    font-size: 5vw;
+    padding-right: 15%;
+    padding-top: 10%;
+
 }
