add new img for background img style , and background img and size on desktop css

--- a/Projeto_padaria/parceiros/templates/html/pagina01.html
+++ b/Projeto_padaria/parceiros/templates/html/pagina01.html
@@ -64,12 +64,15 @@
                     <p>Ver lojas parceiras</p>
                 </div>
             </div>
-            <div>
-                <div>
-                    <p>Ver novos produtos</p>
+        </section>
+        <section class="mid_main_anouciment">
+            <div class="img_background_mid">
+                <div class="paragraphy_mid">
+                    <p>Ver Fotos de produtos</p>
                 </div>
             </div>
         </section>
+        
     </main>
     <footer></footer>
 </body>
