--- a/Projeto_padaria/parceiros/static/css/desktop.css
+++ b/Projeto_padaria/parceiros/static/css/desktop.css
@@ -14,16 +14,16 @@ nav#not_block{
 }
 /* main of anunciment */
 main{
+    height: 88%;
+    width: 100%;
     padding-top: 2%;
     padding-right: 4%;
     padding-left: 4%;
     background-color: rgba(0, 0, 0, 0.774);
 }
 section.upper_main_img{
-    height: 86vh;
-    width: 100%;
-    border-radius: 1%;
     background: black url('../imgs/background_img_upper.jpg') no-repeat;
+    border-radius: 1%;
     color: black;
     box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.795);
 }
@@ -39,15 +39,16 @@ section.upper_main_img > div.container > h1{
 
 .anunnciment{  
     display: inline;
-    padding-top: 7%;  
+    padding-top: 7%;
 }
 
 div.text-img{
     display: inline;
+    width: 50%;
+    height: 30%;
     float: left;
     padding-left: 1%;
     padding-top: 10%;
-    width: 50%;
 }
 div.text-img > h2{
     font-size: 50px;
@@ -95,7 +96,8 @@ img#pizza_anuciment{
 }
 /* Mid section annoucement */
 .mid_main_anouciment{
-    background-color: rgb(255, 252, 252);
+    background: black url('../imgs/background_mid.png') no-repeat;
+    background-size: cover;
     margin-top: 1%;
     border-radius: 2%;
     height: 50vh;
@@ -103,7 +105,7 @@ img#pizza_anuciment{
 .paragraphy_mid > p{
     color: black;
     font-size: 5vw;
-    padding-right: 15%;
+    padding-right: 10%;
     padding-top: 10%;
 
 }
