add second background on section mid

--- a/Projeto_padaria/parceiros/static/css/desktop.css
+++ b/Projeto_padaria/parceiros/static/css/desktop.css
@@ -107,5 +107,8 @@ img#pizza_anuciment{
     font-size: 5vw;
     padding-right: 10%;
     padding-top: 10%;
-
+}
+section#background_bread{
+    background: black url('../imgs/background_img_bread.png');
+    background-size: cover;
 }
