--- a/Projeto_padaria/parceiros/templates/html/pagina01.html
+++ b/Projeto_padaria/parceiros/templates/html/pagina01.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </section>
-        <section class="mid_main_anouciment">
+        <section class="mid_main_anouciment" id="background_bread">
             <div class="img_background_mid">
                 <div class="paragraphy_mid">
                     <p>Ver Fotos de produtos</p>
