--- a/Projeto_padaria/parceiros/templates/html/pagina01.html
+++ b/Projeto_padaria/parceiros/templates/html/pagina01.html
@@ -74,6 +74,20 @@
         </section>
         
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div>
+                <ul class="footer_inline">
+                    <li><a href="#">SOBRE</a></li>
+                    <li><a href="#">Privacidade</a></li>
+                    <li><a href="#">Status</a></li>
+                    <li><a href="#">Contato</a></li>
+                    <li><a href="#">termos</a></li>
+                    <li><a href="#">versão</a></li>
+                </ul>
+                <p>Não compatilhamos suas informações pessoais</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
